kubernetes/apps/default/changedetection/app/ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: changedetection
  namespace: networking
spec:
  entryPoints:
    # - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`changedetection.${SECRET_DOMAIN}`)
      middlewares:
        - name: default
        # - name: basicauth
      services:
        - name: changedetection
          namespace: default
          port: 5000
  # Use the secret generated by cert-manager
  tls:
    secretName: "{SECRET_DOMAIN/./-}-tls"
    # secretName: '${SECRET_DOMAIN/./-}-stage-tls'
